# OmniSupply-AI-Multi-Agent-Supply-Chain-Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  app.py  pyproject.toml
scripts/: load_incom.py  seed.py
src/agents/: base.py  data_analyst.py
src/data/: models.py
src/data/ingestion/: loaders.py  validators.py
src/supervisor/: orchestrator.py
